--- a/refer-effect/sliderEffect/jquerySE01.html
+++ b/refer-effect/sliderEffect/jquerySE01.html
@@ -115,117 +115,86 @@
                     </div>
                     <div class="view-cont">
                         <div>
-<pre><code class="language-html"> &lt;div id="tab-menu"&gt;
-    &lt;div class="tab-btn"&gt;
-        &lt;ul&gt;
-            &lt;li class="active"&gt;&lt;a href="#"&gt;HTML&lt;/a&gt;&lt;/li&gt;
-            &lt;li&gt;&lt;a href="#"&gt;CSS&lt;/a&gt;&lt;/li&gt;
-            &lt;li&gt;&lt;a href="#"&gt;Javascript&lt;/a&gt;&lt;/li&gt;
-            &lt;li&gt;&lt;a href="#"&gt;Jquery&lt;/a&gt;&lt;/li&gt;
-            &lt;li&gt;&lt;a href="#"&gt;SCSS&lt;/a&gt;&lt;/li&gt;
-        &lt;/ul&gt;
-    &lt;/div&gt;
-    &lt;div class="tab-cont"&gt;
-        &lt;div&gt;
-            &lt;h2&gt;HTML&lt;/h2&gt;
-            &lt;p&gt;HTML (Hypertext Markup Language,하이퍼텍스트 마크업 언어)는 프로그래밍 언어는 아니고, 우리가 보는 웹페이지가 어떻게 구조화되어 있는지 브라우저로
-                하여금 알 수 있도록 하는 마크업 언어입니다&lt;/p&gt;
+<pre><code class="language-html">&lt;!-- contents --&gt;
+&lt;main&gt;
+    &lt;div class="slider-wrap"&gt;
+        &lt;div class="slider-img"&gt;
+            &lt;div class="slider" data-name="이미지1"&gt;&lt;img src="../assets/img/bg1.jpg" alt="이미지1"&gt;&lt;/div&gt;
+            &lt;div class="slider" data-name="이미지2"&gt;&lt;img src="../assets/img/bg2.jpg" alt="이미지2"&gt;&lt;/div&gt;
+            &lt;div class="slider" data-name="이미지3"&gt;&lt;img src="../assets/img/bg3.jpg" alt="이미지3"&gt;&lt;/div&gt;
+            &lt;div class="slider" data-name="이미지4"&gt;&lt;img src="../assets/img/bg4.jpg" alt="이미지4"&gt;&lt;/div&gt;
+            &lt;div class="slider" data-name="이미지5"&gt;&lt;img src="../assets/img/bg5.jpg" alt="이미지5"&gt;&lt;/div&gt;
         &lt;/div&gt;
-        &lt;div&gt;
-            &lt;h2&gt;CSS&lt;/h2&gt;
-            &lt;p&gt;김우석&lt;/p&gt;
-        &lt;/div&gt;
-        &lt;div&gt;
-            &lt;h2&gt;Javascript&lt;/h2&gt;
-            &lt;p&gt;김우석&lt;/p&gt;
-        &lt;/div&gt;
-        &lt;div&gt;
-            &lt;h2&gt;Jquery&lt;/h2&gt;
-            &lt;p&gt;jQuery는 HTML의 클라이언트 사이드 조작을 단순화 하도록 설계된 크로스 플랫폼의 자바스크립트 라이브러리 입니다.&lt;/p&gt;
-        &lt;/div&gt;
-        &lt;div&gt;
-            &lt;h2&gt;SCSS&lt;/h2&gt;
-            &lt;p&gt;김우석&lt;/p&gt;
-        &lt;/div&gt;
-    &lt;/div&gt;
-&lt;/div&gt;
-
+    &lt;/div&gt;    
+&lt;/main&gt;
+&lt;!-- contents --&gt;
 </code></pre>
                         </div>
                         <div>
-<pre><code class="language-css">  #tab-menu {
-    min-width: 600px;
-    background: rgb(118, 133, 175);
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-    border-radius: 5px;
-    overflow: hidden;
-    font-family: 'NEXON Lv1 Gothic OTF';
-    color: #fff;
-
-}
-
-.tab-btn ul {
+<pre><code class="language-css">/* slider */
+.slider-wrap {
     display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+}
+.slider-img {
+    position: relative;
+    width: 800px;
+    height: 480px;
+}
+.slider-img img {
+    width: 100%;
+}
+.slider {
+    position: absolute;
+    left: 0; top: 0;
+}
+.slider::before {
+    position: absolute;
+    left: 5px; top: 5px;
+    background: rgba(0,0,0,0.4);
+    color : #fff;
+    padding: 5px 10px 3px;
 }
 
-.tab-btn li {
-    width: 20%;
-    list-style: none;
-    text-align: center;
-}
 
-.tab-btn li a {
-    color: #fff;
-    text-decoration: none;
-    padding: 18px 15px 15px 15px;
-    display: block;
-}
-
-.tab-btn li.active a {
-    border-bottom: 3px solid rgb(61, 69, 128);
-    color: #000;
-}
-
-.tab-cont {
-    background: #fff;
-    padding: 20px;
-    color: #222;
-}
-
-.tab-cont>div {
-    display: none;
-}
-
-.tab-cont>div:first-child {
-    display: block;
-}
-
-.tab-cont>div h2 {
-    margin-bottom: 10px;
-}
-
-.tab-cont>div p {
-    line-height: 1.6;
-}
-
+.slider:nth-child(1){z-index: 5;}
+.slider:nth-child(2){z-index: 4;}
+.slider:nth-child(3){z-index: 3;}
+.slider:nth-child(4){z-index: 2;}
+.slider:nth-child(5){z-index: 1;}
+.slider::before{content : attr(data-name);}
 </code></pre>
                         </div>
                         <div>
-<pre><code class="language-javascript"> const tabView = $(".view-title ul li")
-const tabCovi = $(".view-cont > div")
+<pre><code class="language-javascript">const sliderWrap = $(".slider-wrap");
+const sliderImg = $(".slider-img");
+const slider = $(".slider");
 
-tabView.click(function () {
-    let target = $(this);
-    tabView.removeClass("active");
-    target.addClass("active");
+let currentIndex = 0;   // 현재 보이는 이미지(첫번째)
+let sliderCount = slider.length; //이미지 개수
 
-    let index = target.index();
-    tabCovi.css("display", "none");
-    tabCovi.eq(index).css("display", "block");
-});
+setInterval(function(){
+    let nextIndex = (currentIndex + 1) % sliderCount;
+
+    slider.eq(currentIndex).fadeOut()             //현재 이미지를 사라지게
+    slider.eq(nextIndex).fadeIn()             // 다음 이미지를 나타나게
+
+    currentIndex = nextIndex;
+
+    // slider.eq(1).hide()             //현재 이미지를 사라지게
+    // slider.eq(2).show()             // 다음 이미지를 나타나게
+
+    // slider.eq(2).hide()             //현재 이미지를 사라지게
+    // slider.eq(3).show()             // 다음 이미지를 나타나게
+
+    // slider.eq(3).hide()             //현재 이미지를 사라지게
+    // slider.eq(4).show()             // 다음 이미지를 나타나게
+
+    // slider.eq(4).hide()             //현재 이미지를 사라지게
+    // slider.eq(0).show()             // 다음 이미지를 나타나게
+} , 2000);
 </code></pre>
                         </div>
                     </div>
@@ -242,16 +211,7 @@ tabView.click(function () {
     <script src="../assets/js/custom.js"></script>
     <script src="../assets/js/highlight.min.js"></script>
     <script>
-
-        document.querySelector(".info button").addEventListener("click" , function(){
-            document.querySelector("#cont-wrap").classList.add("show");
-            document.querySelector("#cont-wrap").classList.remove("hide");
-        });
-     
-        document.querySelector(".cont-box button").addEventListener("click" , function(){
-            document.querySelector("#cont-wrap").classList.add("hide");
-        }); 
-     
+        modal();
 
         const sliderWrap = $(".slider-wrap");
         const sliderImg = $(".slider-img");
