--- a/site/test04.html
+++ b/site/test04.html
@@ -611,6 +611,12 @@
            
                 height: 40px;
             }
+            .cont1 .box1 {
+                display: block;
+            }
+            .cont1 .box2 img {
+                display: flex;
+            }
         }
 
     </style>
