--- a/refer-effect/parallaxEffect/jqueryPE03.html
+++ b/refer-effect/parallaxEffect/jqueryPE03.html
@@ -396,14 +396,7 @@ $(window).scroll(function(){
     <script src="../assets/js/custom.js"></script>
     <script src="../assets/js/highlight.min.js"></script>
     <script>
-        document.querySelector(".source button").addEventListener("click", function () {
-            document.querySelector("#cont-wrap").classList.add("show");
-            document.querySelector("#cont-wrap").classList.remove("hide");
-        });
-
-        document.querySelector(".cont-box button").addEventListener("click", function () {
-            document.querySelector("#cont-wrap").classList.add("hide");
-        });
+        modal();
 
 
         // 화면 이동
