--- a/refer-effect/parallaxEffect/javascriptPE03.html
+++ b/refer-effect/parallaxEffect/javascriptPE03.html
@@ -395,14 +395,7 @@ window.addEventListener("scroll" , function(){
     <script src="../assets/js/custom.js"></script>
     <script src="../assets/js/highlight.min.js"></script>
     <script>
-        document.querySelector(".source button").addEventListener("click", function () {
-            document.querySelector("#cont-wrap").classList.add("show");
-            document.querySelector("#cont-wrap").classList.remove("hide");
-        });
-
-        document.querySelector(".cont-box button").addEventListener("click", function () {
-            document.querySelector("#cont-wrap").classList.add("hide");
-        });
+        modal();
 
         document.querySelectorAll(".paraNav ul li a").forEach((element) => {
             element.addEventListener("click", (e) => {
