--- a/site/test04.html
+++ b/site/test04.html
@@ -611,11 +611,132 @@
            
                 height: 40px;
             }
+
+            #banner {
+               
+            } 
+            .banner .all span{
+                padding-left: 30px;
+                font-size: 35px;
+                word-break: break-all;
+            }
+            #banner p {
+                font-size: 25px;
+                margin-left: 30px;
+            }
+            #banner .download2 {
+                margin-left: 30px;
+            }
             .cont1 .box1 {
-                display: block;
+                width: 100%;
+                padding-left: 30px;
+                margin-top: 20px;
+            }
+            .cont1 .box1 img {
+                width: 70px;
+                margin-top: -10px;
+            }
+            .cont1 .box1 h2 {
+                font-size: 30px;
             }
             .cont1 .box2 img {
+                width: 60%;
+                margin-top: 60px;
+                padding-left: 30px;
+            }
+
+
+            .cont2 .box2 {
+                width: 100%;
+                padding-left: 30px;
+                margin-top: 10px;
+            }
+            .cont2 .box2 img {
+                width: 70px;
+                margin-top: -10px;
+            }
+            .cont2 .box2 h2 {
+                font-size: 30px;
+            }
+            .cont2 .box1 img {
+                position: absolute;
+                bottom: 0;
+                left: 0;
+                top: 1680px;
+                width: 85%;
+                padding-left: 30px;
+            }
+
+            .cont3 .box1 {
+                width: 100%;
+                padding-left: 30px;
+                margin-top: 20px;
+            }
+            .cont3 .box1 img {
+                width: 70px;
+                margin-top: -10px;
+            }
+            .cont3 .box1 h2 {
+                font-size: 30px;
+            }
+            .cont3 .box2 img {
+                width: 60%;
+                margin-top: 60px;
+                padding-left: 30px;
+            }
+
+            .cont4 .box2 {
+                width: 100%;
+                padding-left: 30px;
+                margin-top: 10px;
+            }
+            .cont4 .box2 img {
+                width: 70px;
+                margin-top: -10px;
+            }
+            .cont4 .box2 h2 {
+                font-size: 30px;
+            }
+            .cont4 .box1 img {
+                position: absolute;
+                bottom: 0;
+                left: 0;
+                top: 3030px;
+                width: 85%;
+                padding-left: 30px;
+            }
+
+            .cont5 .box1 {
+                width: 100%;
+                padding-left: 30px;
+                margin-top: 20px;
+            }
+            .cont5 .box1 img {
+                width: 70px;
+                margin-top: -10px;
+            }
+            .cont5 .box1 h2 {
+                font-size: 30px;
+            }
+            .cont5 .box2 img {
+                width: 60%;
+                margin-top: 60px;
+                padding-left: 30px;
+            }
+
+            .cont6 .box1 img {
                 display: flex;
+                width: 35%;
+                padding-left: -40px;
+            }
+            .cont6 .box1 .download3 {
+                float: left;
+                margin-left: 150px;
+                width: 200px;
+                height: 70px;
+            }
+            .cont6 .box1 .download3 a {
+                font-size: 35px;
             }
         }
 
@@ -657,7 +778,9 @@
         <div id="banner">
             <div class="container2">
                     <div class="banner">
-                        <span>하고 싶은 일들, 해야 할 일들<br>네이버 웨일로 한 번에!</span>
+                        <div class="all">
+                            <span>하고 싶은 일들, 해야 할 일들<br>네이버 웨일로 한 번에!</span>
+                        </div>
                         <p>네이버 웨일의 다양한 기능을 만나보세요!</p>
                         <div class="download2">
                         <a href="#">다운로드 <img src="https://whale.naver.com/_resource/img/main/icon_btn_arrow.png" alt=""></a>
