--- a/refer-effect/gameEffect/quiz/quiz05.html
+++ b/refer-effect/gameEffect/quiz/quiz05.html
@@ -321,7 +321,7 @@
             <div class="question__quiz">
                 <h3 class="question__title">
                     <span class="question__title__num"></span>
-                    <span class="question__title__ask"></span>
+                    <span class="question__title__ask">문제 1</span>
                 </h3>
                 <div class="question__answer">
                     <div class="question__answer__img">
@@ -349,19 +349,19 @@
                     <div class="question__answer__selects">
                         <label for="select1">
                             <input class="select" type="radio" name="select" id="select1" value="1">
-                            <span class="choice"></span>
+                            <span class="choice">ss</span>
                         </label>
                         <label for="select2">
                             <input class="select" type="radio" name="select" id="select2" value="2">
-                            <span class="choice"></span>
+                            <span class="choice">ss</span>
                         </label>
                         <label for="select3">
                             <input class="select" type="radio" name="select" id="select3" value="3">
-                            <span class="choice"></span>
+                            <span class="choice">ss</span>
                         </label>
                         <label for="select4">
                             <input class="select" type="radio" name="select" id="select4" value="4">
-                            <span class="choice"></span>
+                            <span class="choice">dd</span>
                         </label>
                     </div>
                 </div>
